github/nginx-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxdemo
  namespace: keycloak
  labels:
    name: nginxdemo
spec:
  containers:
  - name: nginxdemo
    image: nginxdemos/hello
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: nginxdemo
  name: nginxdemo
  namespace: keycloak
spec:
  ports:
  - name: http-nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: nginxdemo
  type: NodePort
